adding more styles, setting up basic website structure

--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
     <header>
       <h1>Quiz App</h1>
     </header>
-    <div class="bookmark">Test</div>
-    <div class="bookmark">Test</div>
+    <main>
+      <div class="bookmark">Test</div>
+      <div class="bookmark">Test</div>
+    </main>
     <footer><nav></nav></footer>
   </body>
 </html>
