--- a/index.html
+++ b/index.html
@@ -11,9 +11,28 @@
       <h1>Quiz App</h1>
     </header>
     <main>
-      <div class="bookmark">Test</div>
-      <div class="bookmark">Test</div>
+      <div class="bookmark">
+        <img src="img/bookmrk.jpeg" alt="bookmark button" clas="bkmrkicon" />
+        Test
+      </div>
+      <div class="bookmark">
+        <img
+          src="img/bookmrk.jpeg"
+          alt="bookmark button"
+          class="bkmrkicon"
+        />Test
+      </div>
     </main>
-    <footer><nav></nav></footer>
+    <footer>
+      <nav>
+        <a href="#home"><img src="img/home.jpeg" alt="home button" /></a>
+        <a href="#bookmark"
+          ><img src="img/bookmrk.jpeg" alt="bookmark button"
+        /></a>
+        <a href="#profile"
+          ><img src="img/profil.jpeg" alt="profile button"
+        /></a>
+      </nav>
+    </footer>
   </body>
 </html>
