adujsting the bookmark position

--- a/index.html
+++ b/index.html
@@ -11,30 +11,50 @@
       <h1>Quiz App</h1>
     </header>
     <main>
-      <div class="bookmark">
+      <div class="bookmark" id="bookmark">
         <img src="img/bookmrk.jpeg" alt="bookmark button" class="bkmrkicon" />
         <p>This is my Question?</p>
         <button class="answer-button" id="showanswer">Show Answer</button>
+        <div>
+          <button class="category">#html</button
+          ><button class="category">#flexbox</button
+          ><button class="category">#css</button>
+        </div>
       </div>
       <div class="bookmark">
         <img src="img/bookmrk.jpeg" alt="bookmark button" class="bkmrkicon" />
         <p>This is my Question?</p>
         <button class="answer-button" id="showanswer">Show Answer</button>
+        <div>
+          <button class="category">#html</button
+          ><button class="category">#flexbox</button
+          ><button class="category">#css</button>
+        </div>
       </div>
       <div class="bookmark">
         <img src="img/bookmrk.jpeg" alt="bookmark button" class="bkmrkicon" />
         <p>This is my Question?</p>
         <button class="answer-button" id="showanswer">Show Answer</button>
+        <div>
+          <button class="category">#html</button
+          ><button class="category">#flexbox</button
+          ><button class="category">#css</button>
+        </div>
       </div>
       <div class="bookmark">
         <img src="img/bookmrk.jpeg" alt="bookmark button" class="bkmrkicon" />
         <p>This is my Question?</p>
         <button class="answer-button" id="showanswer">Show Answer</button>
+        <div>
+          <button class="category">#html</button
+          ><button class="category">#flexbox</button
+          ><button class="category">#button</button>
+        </div>
       </div>
     </main>
     <footer>
       <nav>
-        <a href="#home"><img src="img/home.jpeg" alt="home button" /></a>
+        <a href="index.html"><img src="img/home.jpeg" alt="home button" /></a>
         <a href="#bookmark"
           ><img src="img/bookmrk.jpeg" alt="bookmark button"
         /></a>
