editing the quizcards

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         <img src="img/bookmrk.jpeg" alt="bookmark button" class="bkmrkicon" />
         <p>This is my Question?</p>
         <button class="answer-button" id="showanswer">Show Answer</button>
+        <p class="showanswer" id="showanswer">
+          here you will see the answer...
+        </p>
         <div>
           <button class="category">#html</button
           ><button class="category">#flexbox</button
@@ -25,6 +28,9 @@
         <img src="img/bookmrk.jpeg" alt="bookmark button" class="bkmrkicon" />
         <p>This is my Question?</p>
         <button class="answer-button" id="showanswer">Show Answer</button>
+        <p class="showanswer" id="showanswer">
+          here you will see the answer...
+        </p>
         <div>
           <button class="category">#html</button
           ><button class="category">#flexbox</button
@@ -35,6 +41,9 @@
         <img src="img/bookmrk.jpeg" alt="bookmark button" class="bkmrkicon" />
         <p>This is my Question?</p>
         <button class="answer-button" id="showanswer">Show Answer</button>
+        <p class="showanswer" id="showanswer">
+          here you will see the answer...
+        </p>
         <div>
           <button class="category">#html</button
           ><button class="category">#flexbox</button
@@ -45,6 +54,9 @@
         <img src="img/bookmrk.jpeg" alt="bookmark button" class="bkmrkicon" />
         <p>This is my Question?</p>
         <button class="answer-button" id="showanswer">Show Answer</button>
+        <p class="showanswer" id="showanswer">
+          here you will see the answer...
+        </p>
         <div>
           <button class="category">#html</button
           ><button class="category">#flexbox</button
