--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </header>
     <main>
       <div class="bookmark" id="bookmark">
-        <img src="img/bookmrk.jpeg" alt="bookmark button" class="bkmrkicon" />
+        <img src="img/bookmrk.png" alt="bookmark button" class="bkmrkicon" />
         <p>This is my Question?</p>
         <button class="answer-button" id="showanswer">Show Answer</button>
         <p class="showanswer" id="showanswer">
@@ -25,7 +25,7 @@
         </div>
       </div>
       <div class="bookmark">
-        <img src="img/bookmrk.jpeg" alt="bookmark button" class="bkmrkicon" />
+        <img src="img/bookmrk.png" alt="bookmark button" class="bkmrkicon" />
         <p>This is my Question?</p>
         <button class="answer-button" id="showanswer">Show Answer</button>
         <p class="showanswer" id="showanswer">
@@ -38,7 +38,7 @@
         </div>
       </div>
       <div class="bookmark">
-        <img src="img/bookmrk.jpeg" alt="bookmark button" class="bkmrkicon" />
+        <img src="img/bookmrk.png" alt="bookmark button" class="bkmrkicon" />
         <p>This is my Question?</p>
         <button class="answer-button" id="showanswer">Show Answer</button>
         <p class="showanswer" id="showanswer">
@@ -51,7 +51,7 @@
         </div>
       </div>
       <div class="bookmark">
-        <img src="img/bookmrk.jpeg" alt="bookmark button" class="bkmrkicon" />
+        <img src="img/bookmrk.png" alt="bookmark button" class="bkmrkicon" />
         <p>This is my Question?</p>
         <button class="answer-button" id="showanswer">Show Answer</button>
         <p class="showanswer" id="showanswer">
@@ -66,12 +66,12 @@
     </main>
     <footer>
       <nav>
-        <a href="index.html"><img src="img/home.jpeg" alt="home button" /></a>
+        <a href="index.html"><img src="img/home.png" alt="home button" /></a>
         <a href="#bookmark"
-          ><img src="img/bookmrk.jpeg" alt="bookmark button"
+          ><img src="img/bookmrk.png" alt="bookmark button"
         /></a>
         <a href="#profile"
-          ><img src="img/profil.jpeg" alt="profile button"
+          ><img src="img/profile.png" alt="profile button"
         /></a>
       </nav>
     </footer>
