changing jpeg to png file-ending

--- a/index.html
+++ b/index.html
@@ -12,35 +12,33 @@
     </header>
     <main>
       <div class="bookmark">
-        <img src="img/bookmrk.jpeg" alt="bookmark button" class="bkmrkicon" />
+        <img src="img/bookmrk.png" alt="bookmark button" class="bkmrkicon" />
         <p>This is my Question?</p>
         <button class="answer-button" id="showanswer">Show Answer</button>
       </div>
       <div class="bookmark">
-        <img src="img/bookmrk.jpeg" alt="bookmark button" class="bkmrkicon" />
+        <img src="img/bookmrk.png" alt="bookmark button" class="bkmrkicon" />
         <p>This is my Question?</p>
         <button class="answer-button" id="showanswer">Show Answer</button>
       </div>
       <div class="bookmark">
-        <img src="img/bookmrk.jpeg" alt="bookmark button" class="bkmrkicon" />
+        <img src="img/bookmrk.png" alt="bookmark button" class="bkmrkicon" />
         <p>This is my Question?</p>
         <button class="answer-button" id="showanswer">Show Answer</button>
       </div>
       <div class="bookmark">
-        <img src="img/bookmrk.jpeg" alt="bookmark button" class="bkmrkicon" />
+        <img src="img/bookmrk.png" alt="bookmark button" class="bkmrkicon" />
         <p>This is my Question?</p>
         <button class="answer-button" id="showanswer">Show Answer</button>
       </div>
     </main>
     <footer>
       <nav>
-        <a href="#home"><img src="img/home.jpeg" alt="home button" /></a>
+        <a href="#home"><img src="img/home.png" alt="home button" /></a>
         <a href="#bookmark"
-          ><img src="img/bookmrk.jpeg" alt="bookmark button"
+          ><img src="img/bookmrk.png" alt="bookmark button"
         /></a>
-        <a href="#profile"
-          ><img src="img/profil.jpeg" alt="profile button"
-        /></a>
+        <a href="#profile"><img src="img/profil.png" alt="profile button" /></a>
       </nav>
     </footer>
   </body>
