--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           ><img src="img/bookmrk.png" alt="bookmark button"
         /></a>
         <a href="#profile"
-          ><img src="img/profil.png" alt="profile button"
+          ><img src="img/profile.png" alt="profile button"
         /></a>
       </nav>
     </footer>
