--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="bookmark" id="bookmark">
         <img src="img/bookmrk.png" alt="bookmark button" class="bkmrkicon" />
         <p>This is my Question?</p>
-        <button class="answer-button" id="showanswer">Show Answer</button>
+        <button onclick="show()" class="answer-button" id="showanswer">Show Answer</button>
         <p class="showanswer" id="showanswer">
           here you will see the answer...
         </p>
@@ -75,5 +75,6 @@
         /></a>
       </nav>
     </footer>
+    <script src="script.js"></script>
   </body>
 </html>
