Update index.html - removing id from button

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="bookmark" id="bookmark">
         <img src="img/bookmrk.png" alt="bookmark button" class="bkmrkicon" />
         <p>This is my Question?</p>
-        <button onclick="show()" class="answer-button" id="showanswer">Show Answer</button>
+        <button onclick="show()" class="answer-button">Show Answer</button>
         <p class="showanswer" id="showanswer">
           here you will see the answer...
         </p>
