--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@
     </main>
     <footer>
       <nav>
-        <a href="index.html"><img src="img/home.jpeg" alt="home button" /></a>
+        <a href="index.html"><img src="img/home.png" alt="home button" /></a>
         <a href="#bookmark"
           ><img src="img/bookmrk.png" alt="bookmark button"
         /></a>
         <a href="#profile"
-          ><img src="img/profil.jpeg" alt="profile button"
+          ><img src="img/profile.png" alt="profile button"
         /></a>
       </nav>
     </footer>
