trying to make the navbar icons larger by hovering over it. Finnaly put change in comment

--- a/index.html
+++ b/index.html
@@ -66,12 +66,14 @@
     </main>
     <footer>
       <nav>
-        <a href="index.html"><img src="img/home.png" alt="home button" /></a>
+        <a href="index.html"
+          ><img src="img/home.png" alt="home button" class="nav_button"
+        /></a>
         <a href="#bookmark"
-          ><img src="img/bookmrk.png" alt="bookmark button"
+          ><img src="img/bookmrk.png" alt="bookmark button" class="nav_button"
         /></a>
         <a href="#profile"
-          ><img src="img/profile.png" alt="profile button"
+          ><img src="img/profile.png" alt="profile button" class="nav_button"
         /></a>
       </nav>
     </footer>
