--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
       </div>
       <div class="bookmark">
-        <img src="img/bookmrk.png" alt="bookmark button" class="bkmrkicon" />
+        <img src="img/bookunmrk.png" alt="bookmark button" class="bkmrkicon" />
         <h3>This is my Question?</h3>
         <button class="answer-button" id="showanswer">Show Answer</button>
         <p class="showanswer" id="showanswer">
@@ -51,7 +51,7 @@
         </div>
       </div>
       <div class="bookmark">
-        <img src="img/bookmrk.png" alt="bookmark button" class="bkmrkicon" />
+        <img src="img/bookunmrk.png" alt="bookmark button" class="bkmrkicon" />
         <h3>This is my Question?</h3>
         <button class="answer-button" id="showanswer">Show Answer</button>
         <p class="showanswer" id="showanswer">
@@ -69,7 +69,7 @@
         <a href="index.html"
           ><img src="img/home.png" alt="home button" class="nav_button"
         /></a>
-        <a href="#bookmark"
+        <a href="bookmark.html"
           ><img src="img/bookmrk.png" alt="bookmark button" class="nav_button"
         /></a>
         <a href="#profile"
