updating nac bar links to html pages

--- a/bookmark.html
+++ b/bookmark.html
@@ -69,10 +69,10 @@
         <a href="index.html"
           ><img src="img/home.png" alt="home button" class="nav_button"
         /></a>
-        <a href="#bookmark"
+        <a href="bookmark.html"
           ><img src="img/bookmrk.png" alt="bookmark button" class="nav_button"
         /></a>
-        <a href="#profile"
+        <a href="profile.html"
           ><img src="img/profile.png" alt="profile button" class="nav_button"
         /></a>
       </nav>
