--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <a href="bookmark.html"
           ><img src="img/bookmrk.png" alt="bookmark button" class="nav_button"
         /></a>
-        <a href="#profile"
+        <a href="profile.html"
           ><img src="img/profile.png" alt="profile button" class="nav_button"
         /></a>
       </nav>
