- update profile.html - center profile img with flex

--- a/profile.html
+++ b/profile.html
@@ -12,7 +12,7 @@
     </header>
     <main>
       <div class="profile">
-        <img src="img/old/profile.png" />
+        <img src="img/old/profile.png" class="profile_img" />
       </div>
     </main>
     <footer>
