--- a/index.html
+++ b/index.html
@@ -8,59 +8,87 @@
   </head>
   <body>
     <header>
-      <h1>Quiz App</h1>
+      <h1 aria-labelledby="app-title">Quiz App</h1>
     </header>
     <main>
-      <div class="bookmark">
+      <div class="bookmark" aria-labelledby="Quizcard">
         <img src="img/bookmrk.png" alt="bookmark button" class="bkmrkicon" />
         <h3>This is my Question?</h3>
-        <button onclick="show()" class="answer-button">Show Answer</button>
+        <button onclick="show()" class="answer-button" aria-label="Show Answer">
+          Show Answer
+        </button>
         <p class="showanswer" id="showanswer">
           here you will see the answer...
         </p>
         <div>
-          <button class="category">#html</button
-          ><button class="category">#flexbox</button
-          ><button class="category">#css</button>
+          <button class="category" aria-label="category html">#html</button>
+          <button class="category" aria-label="category flexbox">
+            #flexbox
+          </button>
+          <button class="category" aria-label="category css">#css</button>
         </div>
       </div>
-      <div class="bookmark">
-        <img src="img/bookunmrk.png" alt="bookmark button" class="bkmrkicon" />
+      <div class="bookmark" aria-labelledby="Quizcard">
+        <img
+          src="img/bookunmrk.png"
+          alt="bookmark of the quizcard"
+          class="bkmrkicon"
+        />
         <h3>This is my Question?</h3>
-        <button class="answer-button" id="showanswer">Show Answer</button>
+        <button class="answer-button" id="showanswer" aria-label="Show Answer">
+          Show Answer
+        </button>
         <p class="showanswer" id="showanswer">
           here you will see the answer...
         </p>
         <div>
-          <button class="category">#html</button
-          ><button class="category">#flexbox</button
-          ><button class="category">#css</button>
+          <button class="category" aria-label="category html">#html</button>
+          <button class="category" aria-label="category flexbox">
+            #flexbox
+          </button>
+          <button class="category" aria-label="category css">#css</button>
         </div>
       </div>
-      <div class="bookmark">
-        <img src="img/bookmrk.png" alt="bookmark button" class="bkmrkicon" />
+      <div class="bookmark" aria-labelledby="Quizcard">
+        <img
+          src="img/bookmrk.png"
+          alt="bookmark of the quizcard"
+          class="bkmrkicon"
+        />
         <h3>This is my Question?</h3>
-        <button class="answer-button" id="showanswer">Show Answer</button>
+        <button class="answer-button" id="showanswer" aria-label="Show Answer">
+          Show Answer
+        </button>
         <p class="showanswer" id="showanswer">
           here you will see the answer...
         </p>
         <div>
-          <button class="category">#html</button
-          ><button class="category">#flexbox</button
-          ><button class="category">#css</button>
+          <button class="category" aria-label="category html">#html</button>
+          <button class="category" aria-label="category flexbox">
+            #flexbox
+          </button>
+          <button class="category" aria-label="category css">#css</button>
         </div>
       </div>
-      <div class="bookmark">
-        <img src="img/bookunmrk.png" alt="bookmark button" class="bkmrkicon" />
+      <div class="bookmark" aria-labelledby="Quizcard">
+        <img
+          src="img/bookunmrk.png"
+          alt="bookmark of the quizcard"
+          class="bkmrkicon"
+        />
         <h3>This is my Question?</h3>
-        <button class="answer-button" id="showanswer">Show Answer</button>
+        <button class="answer-button" id="showanswer" aria-label="Show Answer">
+          Show Answer
+        </button>
         <p class="showanswer" id="showanswer">
           here you will see the answer...
         </p>
         <div>
-          <button class="category">#html</button
-          ><button class="category">#flexbox</button
-          ><button class="category">#button</button>
+          <button class="category" aria-label="category html">#html</button>
+          <button class="category" aria-label="category flexbox">
+            #flexbox
+          </button>
+          <button class="category" aria-label="category css">#css</button>
         </div>
       </div>
     </main>
