adjusting a11y description in index.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </header>
     <main>
       <div class="bookmark" aria-labelledby="Quizcard">
-        <img src="img/bookmrk.png" alt="bookmark button" class="bkmrkicon" />
+        <img src="img/bookmrk.png" alt="checked bookmark" class="bkmrkicon" />
         <h3>This is my Question?</h3>
         <button onclick="show()" class="answer-button" aria-label="Show Answer">
           Show Answer
@@ -31,7 +31,7 @@
       <div class="bookmark" aria-labelledby="Quizcard">
         <img
           src="img/bookunmrk.png"
-          alt="bookmark of the quizcard"
+          alt="unchecked bookmark"
           class="bkmrkicon"
         />
         <h3>This is my Question?</h3>
@@ -50,11 +50,7 @@
         </div>
       </div>
       <div class="bookmark" aria-labelledby="Quizcard">
-        <img
-          src="img/bookmrk.png"
-          alt="bookmark of the quizcard"
-          class="bkmrkicon"
-        />
+        <img src="img/bookmrk.png" alt="checked bookmark" class="bkmrkicon" />
         <h3>This is my Question?</h3>
         <button class="answer-button" id="showanswer" aria-label="Show Answer">
           Show Answer
@@ -73,7 +69,7 @@
       <div class="bookmark" aria-labelledby="Quizcard">
         <img
           src="img/bookunmrk.png"
-          alt="bookmark of the quizcard"
+          alt="unchecked bookmark"
           class="bkmrkicon"
         />
         <h3>This is my Question?</h3>
@@ -95,13 +91,19 @@
     <footer>
       <nav>
         <a href="index.html"
-          ><img src="img/home.png" alt="home button" class="nav_button"
+          ><img src="img/home.png" alt="homepage button" class="nav_button"
         /></a>
         <a href="bookmark.html"
-          ><img src="img/bookmrk.png" alt="bookmark button" class="nav_button"
+          ><img
+            src="img/bookmrk.png"
+            alt="bookmark-page button"
+            class="nav_button"
         /></a>
         <a href="profile.html"
-          ><img src="img/profile.png" alt="profile button" class="nav_button"
+          ><img
+            src="img/profile.png"
+            alt="profile-page button"
+            class="nav_button"
         /></a>
       </nav>
     </footer>
