adding profile username and adjusting the position - of user name and profile picture.

--- a/profile.html
+++ b/profile.html
@@ -12,7 +12,12 @@
     </header>
     <main>
       <div class="profile">
-        <img src="img/old/profile.png" class="profile_img" />
+        <section>
+          <img src="img/old/profile.png" class="profile_img" />
+          <h3 class="profile_username" aria-label="Name of the profile user">
+            Jaan Tamm
+          </h3>
+        </section>
       </div>
     </main>
     <footer>
