Adding a about-me description for the profile-user

--- a/profile.html
+++ b/profile.html
@@ -18,6 +18,14 @@
             Jaan Tamm
           </h3>
         </section>
+        <section
+          aria-label="description about the user"
+          class="about-me_profile"
+        >
+          Hello :D, I'm Jaan and I love too do Quiz Apps all day long. I do Quiz
+          Apss on every topic from Biology to Coding to city-names to chocolates
+          lfavours... You name it.. I play it!
+        </section>
       </div>
     </main>
     <footer>
