Adding Counter placeholder and ajusting basic design -for profile-page

--- a/profile.html
+++ b/profile.html
@@ -26,6 +26,16 @@
           Apss on every topic from Biology to Coding to city-names to chocolates
           lfavours... You name it.. I play it!
         </section>
+        <div class="counter_div">
+          <p class="?-counter">[?!!] = 23</p>
+          <p class="bookmark-counter">
+            <img
+              src="img/bookmrk.png"
+              alt="bookmarks created"
+              class="bookmark-counter-pic"
+            />= 12
+          </p>
+        </div>
       </div>
     </main>
     <footer>
