Styling profile div with media query for mobile and desktop

--- a/profile.html
+++ b/profile.html
@@ -12,7 +12,7 @@
     </header>
     <main>
       <div class="profile">
-        <section>
+        <section class="name_pic">
           <img src="img/old/profile.png" class="profile_img" />
           <h3 class="profile_username" aria-label="Name of the profile user">
             Jaan Tamm
