correcting typo in about-text

--- a/profile.html
+++ b/profile.html
@@ -24,7 +24,7 @@
         >
           Hello :D, I'm Jaan and I love too do Quiz Apps all day long. I do Quiz
           Apss on every topic from Biology to Coding to city-names to chocolates
-          lfavours... You name it.. I play it!
+          favours... You name it.. I play it!
         </section>
         <div class="counter_div">
           <p class="?-counter">[?!!] = 23</p>
