including toggle colormode and adjust css

--- a/profile.html
+++ b/profile.html
@@ -11,6 +11,11 @@
       <h1>Quiz App</h1>
     </header>
     <main>
+      <div class="toggle_color-mode">
+        <button type="button" aria-label="toggle-colormode" onclick="">
+          ColorMode
+        </button>
+      </div>
       <div class="profile">
         <section class="name_pic">
           <img src="img/old/profile.png" class="profile_img" />
