I tried to add a color-mode switch/toggle - it works but not on the div container and header and footer

--- a/profile.html
+++ b/profile.html
@@ -12,7 +12,7 @@
     </header>
     <main>
       <div class="toggle_color-mode">
-        <button type="button" aria-label="toggle-colormode" onclick="">
+        <button aria-label="toggle-colormode" onclick="colorMode()">
           ColorMode
         </button>
       </div>
