adding a counter function, but it doesnt work yet

--- a/profile.html
+++ b/profile.html
@@ -38,7 +38,7 @@
               src="img/bookmrk.png"
               alt="bookmarks created"
               class="bookmark-counter-pic"
-            />= 12
+            /><span id="bookmark-count">= 12</span>
           </p>
         </div>
       </div>
