Adding to the nav-bar a highlight for the selected page. it should be on the profile branch, but there occured some conflicts with git.

--- a/bookmark.html
+++ b/bookmark.html
@@ -70,7 +70,10 @@
           ><img src="img/home.png" alt="home button" class="nav_button"
         /></a>
         <a href="bookmark.html"
-          ><img src="img/bookmrk.png" alt="bookmark button" class="nav_button"
+          ><img
+            src="img/bookmrk.png"
+            alt="bookmark button"
+            class="nav_button_bookmark"
         /></a>
         <a href="profile.html"
           ><img src="img/profile.png" alt="profile button" class="nav_button"
