--- a/index.html
+++ b/index.html
@@ -102,7 +102,10 @@
     <footer>
       <nav>
         <a href="index.html"
-          ><img src="img/home.png" alt="homepage button" class="nav_button"
+          ><img
+            src="img/home.png"
+            alt="homepage button"
+            class="nav_button_home"
         /></a>
         <a href="bookmark.html"
           ><img
