--- a/profile.html
+++ b/profile.html
@@ -52,7 +52,10 @@
           ><img src="img/bookmrk.png" alt="bookmark button" class="nav_button"
         /></a>
         <a href="profile.html"
-          ><img src="img/profile.png" alt="profile button" class="nav_button"
+          ><img
+            src="img/profile.png"
+            alt="profile button"
+            class="nav_button_profile"
         /></a>
       </nav>
     </footer>
