--- a/profile.html
+++ b/profile.html
@@ -30,10 +30,9 @@
           Hello :D, I'm Jaan and I love too do Quiz Apps all day long. I do Quiz
           Apss on every topic from Biology to Coding to city-names to chocolates
           flavours... You name it.. I play it!
-          <button
-            aria-label="test-button for bookmarkcounter"
-            id="check_bkmrk"
-          ></button>
+          <button aria-label="test-button for bookmarkcounter" id="check_bkmrk">
+            bookmark-counter-test
+          </button>
         </section>
         <div class="counter_div">
           <p class="?-counter">[?!!] = 23</p>
