--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           id="check_bkmrk"
           onclick="changeBmrk()"
         />
-        <h3>This is my Question?</h3>
+        <h3>In what language is the phrase ‘Hakuna Matata’?</h3>
         <button onclick="show()" class="answer-button" aria-label="Show Answer">
           Show Answer
         </button>
@@ -39,17 +39,18 @@
           src="img/bookunmrk.png"
           alt="unchecked bookmark"
           class="bkmrkicon"
+          onclick="changeBmrk()"
         />
-        <h3>This is my Question?</h3>
+        <h3>And what is the meaning of ‘Hakuna Matata’?</h3>
         <button
           class="answer-button"
-          onclick="changeBmrk()"
-          id="showanswer"
+          onclick="show2()"
+          id=""
           aria-label="Show Answer"
         >
           Show Answer
         </button>
-        <p class="showanswer" id="showanswer">
+        <p class="showanswer" id="showanswer2">
           here you will see the answer...
         </p>
         <div>
@@ -62,11 +63,15 @@
       </div>
       <div class="bookmark" aria-labelledby="Quizcard">
         <img src="img/bookmrk.png" alt="checked bookmark" class="bkmrkicon" />
-        <h3>This is my Question?</h3>
-        <button class="answer-button" id="showanswer" aria-label="Show Answer">
+        <h3>What geometric shape is generally used for stop signs?</h3>
+        <button
+          onclick="show3()"
+          class="answer-button"
+          aria-label="Show Answer"
+        >
           Show Answer
         </button>
-        <p class="showanswer" id="showanswer">
+        <p class="showanswer" id="showanswer3">
           here you will see the answer...
         </p>
         <div>
@@ -83,11 +88,15 @@
           alt="unchecked bookmark"
           class="bkmrkicon"
         />
-        <h3>This is my Question?</h3>
-        <button class="answer-button" id="showanswer" aria-label="Show Answer">
+        <h3>How many languages are written from right to left?</h3>
+        <button
+          onclick="show4()"
+          class="answer-button"
+          aria-label="Show Answer"
+        >
           Show Answer
         </button>
-        <p class="showanswer" id="showanswer">
+        <p class="showanswer" id="showanswer4">
           here you will see the answer...
         </p>
         <div>
