Adding bookmark check-ucheck ability to all

--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
           src="img/bookunmrk.png"
           alt="unchecked bookmark"
           class="bkmrkicon"
-          onclick="changeBmrk()"
+          id="check_bkmrk2"
+          onclick="changeBmrk2()"
         />
         <h3>And what is the meaning of ‘Hakuna Matata’?</h3>
         <button
@@ -62,7 +63,13 @@
         </div>
       </div>
       <div class="bookmark" aria-labelledby="Quizcard">
-        <img src="img/bookmrk.png" alt="checked bookmark" class="bkmrkicon" />
+        <img
+          src="img/bookmrk.png"
+          alt="checked bookmark"
+          class="bkmrkicon"
+          id="check_bkmrk3"
+          onclick="changeBmrk3()"
+        />
         <h3>What geometric shape is generally used for stop signs?</h3>
         <button
           onclick="show3()"
@@ -87,6 +94,8 @@
           src="img/bookunmrk.png"
           alt="unchecked bookmark"
           class="bkmrkicon"
+          onclick="changeBmrk4()"
+          id="check_bkmrk4"
         />
         <h3>How many languages are written from right to left?</h3>
         <button
