change classname bookmark to quizcard

--- a/bookmark.html
+++ b/bookmark.html
@@ -11,7 +11,7 @@
       <h1>Quiz App</h1>
     </header>
     <main>
-      <div class="bookmark">
+      <div class="quizcard">
         <img src="img/bookmrk.png" alt="bookmark button" class="bkmrkicon" />
         <h3>This is my Question?</h3>
         <button onclick="show()" class="answer-button">Show Answer</button>
@@ -24,7 +24,7 @@
           ><button class="category">#css</button>
         </div>
       </div>
-      <div class="bookmark">
+      <div class="quizcard">
         <img src="img/bookmrk.png" alt="bookmark button" class="bkmrkicon" />
         <h3>This is my Question?</h3>
         <button class="answer-button" id="showanswer">Show Answer</button>
@@ -37,7 +37,7 @@
           ><button class="category">#css</button>
         </div>
       </div>
-      <div class="bookmark">
+      <div class="quizcard">
         <img src="img/bookmrk.png" alt="bookmark button" class="bkmrkicon" />
         <h3>This is my Question?</h3>
         <button class="answer-button" id="showanswer">Show Answer</button>
@@ -50,7 +50,7 @@
           ><button class="category">#css</button>
         </div>
       </div>
-      <div class="bookmark">
+      <div class="quizcard">
         <img src="img/bookmrk.png" alt="bookmark button" class="bkmrkicon" />
         <h3>This is my Question?</h3>
         <button class="answer-button" id="showanswer">Show Answer</button>
