--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <h1 aria-labelledby="app-title">Quiz App</h1>
     </header>
     <main>
-      <div class="bookmark" aria-labelledby="Quizcard">
+      <div class="quizcard" aria-labelledby="Quizcard">
         <img
           src="img/bookmrk.png"
           alt="checked bookmark"
@@ -34,7 +34,7 @@
           <button class="category" aria-label="category css">#css</button>
         </div>
       </div>
-      <div class="bookmark" aria-labelledby="Quizcard">
+      <div class="quizcard" aria-labelledby="Quizcard">
         <img
           src="img/bookunmrk.png"
           alt="unchecked bookmark"
@@ -62,7 +62,7 @@
           <button class="category" aria-label="category css">#css</button>
         </div>
       </div>
-      <div class="bookmark" aria-labelledby="Quizcard">
+      <div class="quizcard" aria-labelledby="Quizcard">
         <img
           src="img/bookmrk.png"
           alt="checked bookmark"
@@ -89,7 +89,7 @@
           <button class="category" aria-label="category css">#css</button>
         </div>
       </div>
-      <div class="bookmark" aria-labelledby="Quizcard">
+      <div class="quizcard" aria-labelledby="Quizcard">
         <img
           src="img/bookunmrk.png"
           alt="unchecked bookmark"
