put a hide button in the first quizcard on index

--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
           onclick="changeBmrk()"
         />
         <h3>In what language is the phrase ‘Hakuna Matata’?</h3>
-        <button onclick="show()" class="answer-button" aria-label="Show Answer">
+        <button
+          onclick="show()"
+          class="answer-button"
+          data-js="hide-button"
+          aria-label="Show Answer"
+        >
           Show Answer
         </button>
         <p class="showanswer" id="showanswer">
