adjusting the answer button - now show-hide switch

--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
         <button
           onclick="show()"
           class="answer-button"
-          data-js="hide-button"
+          data-js="answer-button"
           aria-label="Show Answer"
         >
           Show Answer
         </button>
-        <p class="showanswer" id="showanswer">
+        <p class="showanswer" id="showanswer" data-js="answer-text">
           here you will see the answer...
         </p>
         <div>
