adjustinf quizcard positions and design

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <header>
       <h1 aria-labelledby="app-title">Quiz App</h1>
+      <img src="img/question-145_128.gif" alt="arising questionmark" />
     </header>
     <main>
       <div class="quizcard" aria-labelledby="Quizcard">
