change bookmark-icon class-make it more readable

--- a/bookmark.html
+++ b/bookmark.html
@@ -15,7 +15,7 @@
         <img
           src="img/bookmrk.png"
           alt="checked bookmark"
-          class="bkmrkicon"
+          class="bookmark-icon"
           id="check_bkmrk"
           onclick="changeBmrk()"
         />
@@ -38,7 +38,7 @@
         <img
           src="img/bookunmrk.png"
           alt="unchecked bookmark"
-          class="bkmrkicon"
+          class="bookmark-icon"
           id="check_bkmrk2"
           onclick="changeBmrk2()"
         />
@@ -66,7 +66,7 @@
         <img
           src="img/bookmrk.png"
           alt="checked bookmark"
-          class="bkmrkicon"
+          class="bookmark-icon"
           id="check_bkmrk3"
           onclick="changeBmrk3()"
         />
@@ -93,7 +93,7 @@
         <img
           src="img/bookunmrk.png"
           alt="unchecked bookmark"
-          class="bkmrkicon"
+          class="bookmark-icon"
           onclick="changeBmrk4()"
           id="check_bkmrk4"
         />
