--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <img
           src="img/bookmrk.png"
           alt="checked bookmark"
-          class="bkmrkicon"
+          class="bookmark-icon"
           id="check_bkmrk"
           onclick="changeBmrk()"
         />
@@ -44,7 +44,7 @@
         <img
           src="img/bookunmrk.png"
           alt="unchecked bookmark"
-          class="bkmrkicon"
+          class="bookmark-icon"
           id="check_bkmrk2"
           onclick="changeBmrk2()"
         />
@@ -72,7 +72,7 @@
         <img
           src="img/bookmrk.png"
           alt="checked bookmark"
-          class="bkmrkicon"
+          class="bookmark-icon"
           id="check_bkmrk3"
           onclick="changeBmrk3()"
         />
@@ -99,7 +99,7 @@
         <img
           src="img/bookunmrk.png"
           alt="unchecked bookmark"
-          class="bkmrkicon"
+          class="bookmark-icon"
           onclick="changeBmrk4()"
           id="check_bkmrk4"
         />
