--- a/index.html
+++ b/index.html
@@ -33,11 +33,15 @@
           here you will see the answer...
         </p>
         <div>
-          <button class="category" aria-label="category html">#html</button>
-          <button class="category" aria-label="category flexbox">
-            #flexbox
-          </button>
-          <button class="category" aria-label="category css">#css</button>
+          <span class="category" aria-label="category html"
+            ><a href="">#html</a></span
+          >
+          <span class="category" aria-label="category flexbox">
+            <a href="">#flexbox</a>
+          </span>
+          <span class="category" aria-label="category css"
+            ><a href="">#css</a></span
+          >
         </div>
       </div>
       <div class="quizcard" aria-labelledby="Quizcard">
@@ -61,11 +65,15 @@
           here you will see the answer...
         </p>
         <div>
-          <button class="category" aria-label="category html">#html</button>
-          <button class="category" aria-label="category flexbox">
-            #flexbox
-          </button>
-          <button class="category" aria-label="category css">#css</button>
+          <span class="category" aria-label="category html"
+            ><a href="">#html</a></span
+          >
+          <span class="category" aria-label="category flexbox">
+            <a href="">#flexbox</a>
+          </span>
+          <span class="category" aria-label="category css"
+            ><a href="">#css</a></span
+          >
         </div>
       </div>
       <div class="quizcard" aria-labelledby="Quizcard">
@@ -88,11 +96,15 @@
           here you will see the answer...
         </p>
         <div>
-          <button class="category" aria-label="category html">#html</button>
-          <button class="category" aria-label="category flexbox">
-            #flexbox
-          </button>
-          <button class="category" aria-label="category css">#css</button>
+          <span class="category" aria-label="category html"
+            ><a href="">#html</a></span
+          >
+          <span class="category" aria-label="category flexbox">
+            <a href="">#flexbox</a>
+          </span>
+          <span class="category" aria-label="category css"
+            ><a href="">#css</a></span
+          >
         </div>
       </div>
       <div class="quizcard" aria-labelledby="Quizcard">
@@ -115,11 +127,15 @@
           here you will see the answer...
         </p>
         <div>
-          <button class="category" aria-label="category html">#html</button>
-          <button class="category" aria-label="category flexbox">
-            #flexbox
-          </button>
-          <button class="category" aria-label="category css">#css</button>
+          <span class="category" aria-label="category html"
+            ><a href="">#html</a></span
+          >
+          <span class="category" aria-label="category flexbox">
+            <a href="">#flexbox</a>
+          </span>
+          <span class="category" aria-label="category css"
+            ><a href="">#css</a></span
+          >
         </div>
       </div>
     </main>
