adding show hide button to all cards on index.html

--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
         <button
           class="answer-button"
           onclick="show2()"
-          id=""
+          data-js="answer-button2"
           aria-label="Show Answer"
         >
           Show Answer
         </button>
-        <p class="showanswer" id="showanswer2">
+        <p class="showanswer" id="showanswer2" data-js="answer-text2">
           here you will see the answer...
         </p>
         <div>
@@ -88,11 +88,12 @@
         <button
           onclick="show3()"
           class="answer-button"
+          data-js="answer-button3"
           aria-label="Show Answer"
         >
           Show Answer
         </button>
-        <p class="showanswer" id="showanswer3">
+        <p class="showanswer" id="showanswer3" data-js="answer-text3">
           here you will see the answer...
         </p>
         <div>
@@ -119,11 +120,12 @@
         <button
           onclick="show4()"
           class="answer-button"
+          data-js="answer-button4"
           aria-label="Show Answer"
         >
           Show Answer
         </button>
-        <p class="showanswer" id="showanswer4">
+        <p class="showanswer" id="showanswer4" data-js="answer-text4">
           here you will see the answer...
         </p>
         <div>
