create ul wraping or nesting for the nav-bar only for index-html

--- a/index.html
+++ b/index.html
@@ -143,24 +143,26 @@
     </main>
     <footer>
       <nav>
-        <a href="index.html"
+        <ul>
+<li></lo><a href="index.html"
           ><img
             src="img/home.png"
             alt="homepage button"
             class="nav_button_home"
-        /></a>
-        <a href="bookmark.html"
+        /></a></li>
+        <li><a href="bookmark.html"
           ><img
             src="img/bookmrk.png"
             alt="bookmark-page button"
             class="nav_button"
-        /></a>
-        <a href="profile.html"
+        /></a></li>
+        <li><a href="profile.html"
           ><img
             src="img/profile.png"
             alt="profile-page button"
             class="nav_button"
-        /></a>
+        /></a></li>
+      </ul>
       </nav>
     </footer>
     <script src="script.js"></script>
