--- a/bookmark.html
+++ b/bookmark.html
@@ -119,18 +119,26 @@
     </main>
     <footer>
       <nav>
-        <a href="index.html"
-          ><img src="img/home.png" alt="home button" class="nav_button"
-        /></a>
-        <a href="bookmark.html"
-          ><img
-            src="img/bookmrk.png"
-            alt="bookmark button"
-            class="nav_button_bookmark"
-        /></a>
-        <a href="profile.html"
-          ><img src="img/profile.png" alt="profile button" class="nav_button"
-        /></a>
+        <ul>
+          <li></lo><a href="index.html"
+                    ><img
+                      src="img/home.png"
+                      alt="homepage button"
+                      class="nav_button"
+                  /></a></li>
+                  <li><a href="bookmark.html"
+                    ><img
+                      src="img/bookmrk.png"
+                      alt="bookmark-page button"
+                      class="nav_button_bookmark"
+                  /></a></li>
+                  <li><a href="profile.html"
+                    ><img
+                      src="img/profile.png"
+                      alt="profile-page button"
+                      class="nav_button"
+                  /></a></li>
+                </ul>
       </nav>
     </footer>
     <script src="script.js"></script>
