make function name more understandable

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           alt="checked bookmark"
           class="bookmark-icon"
           id="check_bkmrk"
-          onclick="changeBmrk();bookmarkChecked()"
+          onclick="changeBookmark();bookmarkChecked()"
         />
         <h3>In what language is the phrase ‘Hakuna Matata’?</h3>
         <button
@@ -51,7 +51,7 @@
           alt="unchecked bookmark"
           class="bookmark-icon"
           id="check_bkmrk2"
-          onclick="changeBmrk2()"
+          onclick="changeBookmark2()"
         />
         <h3>And what is the meaning of ‘Hakuna Matata’?</h3>
         <button
@@ -83,7 +83,7 @@
           alt="checked bookmark"
           class="bookmark-icon"
           id="check_bkmrk3"
-          onclick="changeBmrk3()"
+          onclick="changeBookmark3()"
         />
         <h3>What geometric shape is generally used for stop signs?</h3>
         <button
@@ -114,7 +114,7 @@
           src="img/bookunmrk.png"
           alt="unchecked bookmark"
           class="bookmark-icon"
-          onclick="changeBmrk4()"
+          onclick="changeBookmark4()"
           id="check_bkmrk4"
         />
         <h3>How many languages are written from right to left?</h3>
