--- a/bookmark.html
+++ b/bookmark.html
@@ -17,7 +17,7 @@
           alt="checked bookmark"
           class="bookmark-icon"
           id="check_bkmrk"
-          onclick="changeBmrk()"
+          onclick="changeBookmark()"
         />
         <h3>In what language is the phrase ‘Hakuna Matata’?</h3>
         <button onclick="show()" class="answer-button" aria-label="Show Answer">
@@ -40,7 +40,7 @@
           alt="unchecked bookmark"
           class="bookmark-icon"
           id="check_bkmrk2"
-          onclick="changeBmrk2()"
+          onclick="changeBookmark2()"
         />
         <h3>And what is the meaning of ‘Hakuna Matata’?</h3>
         <button
@@ -68,7 +68,7 @@
           alt="checked bookmark"
           class="bookmark-icon"
           id="check_bkmrk3"
-          onclick="changeBmrk3()"
+          onclick="changeBookmark3()"
         />
         <h3>What geometric shape is generally used for stop signs?</h3>
         <button
@@ -94,7 +94,7 @@
           src="img/bookunmrk.png"
           alt="unchecked bookmark"
           class="bookmark-icon"
-          onclick="changeBmrk4()"
+          onclick="changeBookmark4()"
           id="check_bkmrk4"
         />
         <h3>How many languages are written from right to left?</h3>
