--- a/bookmark.html
+++ b/bookmark.html
@@ -16,7 +16,7 @@
           src="img/bookmrk.png"
           alt="checked bookmark"
           class="bookmark-icon"
-          id="check_bkmrk"
+          id="check--bookmark"
           onclick="changeBookmark()"
         />
         <h3>In what language is the phrase ‘Hakuna Matata’?</h3>
@@ -39,7 +39,7 @@
           src="img/bookunmrk.png"
           alt="unchecked bookmark"
           class="bookmark-icon"
-          id="check_bkmrk2"
+          id="check--bookmark2"
           onclick="changeBookmark2()"
         />
         <h3>And what is the meaning of ‘Hakuna Matata’?</h3>
@@ -67,7 +67,7 @@
           src="img/bookmrk.png"
           alt="checked bookmark"
           class="bookmark-icon"
-          id="check_bkmrk3"
+          id="check--bookmark3"
           onclick="changeBookmark3()"
         />
         <h3>What geometric shape is generally used for stop signs?</h3>
@@ -95,7 +95,7 @@
           alt="unchecked bookmark"
           class="bookmark-icon"
           onclick="changeBookmark4()"
-          id="check_bkmrk4"
+          id="check--bookmark4"
         />
         <h3>How many languages are written from right to left?</h3>
         <button
