--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           src="img/bookmrk.png"
           alt="checked bookmark"
           class="bookmark-icon"
-          id="check_bkmrk"
+          id="check--bookmark"
           onclick="changeBookmark();bookmarkChecked()"
         />
         <h3>In what language is the phrase ‘Hakuna Matata’?</h3>
@@ -50,7 +50,7 @@
           src="img/bookunmrk.png"
           alt="unchecked bookmark"
           class="bookmark-icon"
-          id="check_bkmrk2"
+          id="check--bookmark2"
           onclick="changeBookmark2()"
         />
         <h3>And what is the meaning of ‘Hakuna Matata’?</h3>
@@ -82,7 +82,7 @@
           src="img/bookmrk.png"
           alt="checked bookmark"
           class="bookmark-icon"
-          id="check_bkmrk3"
+          id="check--bookmark3"
           onclick="changeBookmark3()"
         />
         <h3>What geometric shape is generally used for stop signs?</h3>
@@ -115,7 +115,7 @@
           alt="unchecked bookmark"
           class="bookmark-icon"
           onclick="changeBookmark4()"
-          id="check_bkmrk4"
+          id="check--bookmark4"
         />
         <h3>How many languages are written from right to left?</h3>
         <button
